<package>
  <name>point_cloud_transport_plugins</name>
  <version>0.1.0</version>
    <description>
      A set of plugins for publishing and subscribing to sensor_msgs/PointCloud2 topics
      in representations other than raw point data.
  </description>
  <author>Jakub Paplham</author>
  <maintainer email="paplhjak@fel.cvut.cz">Jakub Paplham</maintainer>
  <license> BSD </license>
  
  <url>https://github.com/paplhjak/point_cloud_transport_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>draco_point_cloud_transport</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
